added div styling

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,9 @@ a {
 a:hover {
   text-decoration: underline;
 }
+div {
+  margin: auto;
+  width: 80%;
+  border: 1px solid green;
+  padding: 10px;
+}
