--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ a:hover {
 div {
   margin: auto;
   width: 80%;
-  border: 1px solid green;
+  border: 1px solid gainsboro;
   padding: 10px;
+}
+p {
+  margin-bottom: 0px;
 }
