fixed mobile view width

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ p {
   margin-bottom: 5px;
   margin-top: 5px;
 }
-@media (min-width: 800px) {
+@media (max-width: 800px) {
   div {
     width: 80%;
   }
