--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@ h1 {
   text-align: center;
 }
 h2 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  width: 60%;
 }
 .links {
   margin: auto;
@@ -24,7 +23,10 @@ p {
   margin-top: 5px;
 }
 @media (max-width: 800px) {
-  div {
+  h2 {
+    width: 60%;
+  }
+  .links {
     width: 80%;
   }
 }
