--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 h1 {
   text-align: center;
 }
+h2 {
+  padding-left:20px;
+}
 .section {
   margin:auto;
   width: 60%;
@@ -10,13 +13,13 @@ h1 {
   margin: auto;
   width: 60%;
   border: 1px solid gainsboro;
-  padding: 0px 20px;
 }
 a {
   display: block;
   color: green;
   text-decoration: none;
-  padding: 5px 0px;
+  padding-left: 20px;
+  padding-bottom: 5px;
 }
 a:hover {
   text-decoration: underline;
