--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ h1 {
   width: 60%;
   background-color: gray;
   box-sizing: border-box;
-  padding-left: 20px;
+  padding: 20px;
 }
 .links {
   margin: auto;
