added spacing between sections

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ h1 {
   background-color: gray;
   box-sizing: border-box;
   padding: 5px 20px;
-  color: whitesmoke;
+  color: white;
 }
 .links {
   margin: auto;
