--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ h1 {
   background-color: gainsboro;
   box-sizing: border-box;
   padding: 10px 20px;
+  display: none;
+  overflow: hidden;
 }
 a {
   display: block;
