--- a/styles.css
+++ b/styles.css
@@ -19,15 +19,11 @@ h1 {
   background-color: gray;
 }
 .collapsible:after {
-  content: "\2796";
-  color: white;
-  font-size: 15px;
+  content: "\2212";
   float: right;
 }
 .active:after {
-  content: '\02795';
-  color: white;
-  font-size: 15px;
+  content: '\002B';
 }
 .links {
   margin: auto;
