--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ a:hover {
   text-decoration: underline;
 }
 @media (max-width: 800px) {
-  .section {
+  .collapsible {
     width: 80%;
   }
   .links {
