--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,7 @@ h1 {
 }
 a {
   display: block;
-  color: green;
+  color: black;
   text-decoration: none;
   padding-bottom: 5px;
 }
@@ -16,7 +16,7 @@ a:hover {
   margin:auto;
   box-sizing: border-box;
   border: none;
-  background-color: darkgray;
+  background-color: steelblue;
   color: white;
   text-align: left;
   padding: 20px;
@@ -37,7 +37,7 @@ a:hover {
 .links {
   margin: auto;
   width: 60%;
-  background-color: gainsboro;
+  background-color: lightsteelblue;
   box-sizing: border-box;
   padding: 10px 20px;
   display: block;
