--- a/styles/global.css
+++ b/styles/global.css
@@ -16,7 +16,7 @@ a:hover {
   margin:auto;
   box-sizing: border-box;
   border: none;
-  background-color: steelblue;
+  background-color: midnightblue;
   color: white;
   text-align: left;
   padding: 20px;
@@ -25,7 +25,7 @@ a:hover {
   font-weight: bold;
 }
 .collapsible:hover {
-  background-color: gray;
+  background-color: navy;
 }
 .collapsible:after {
   content: "\2212";
@@ -37,7 +37,7 @@ a:hover {
 .links {
   margin: auto;
   width: 60%;
-  background-color: lightsteelblue;
+  background-color: ghostwhite;
   box-sizing: border-box;
   padding: 10px 20px;
   display: block;
