--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@ h1 {
 }
 a {
   display: block;
-  color: #AAC7D8;
+  color: #DFEBF6;
   text-decoration: none;
   padding-bottom: 5px;
 }
@@ -29,7 +29,7 @@ a:hover {
   font-weight: bold;
 }
 .collapsible:hover {
-  background-color: #768A96;
+  background-color: #44576D;
 }
 .collapsible:after {
   content: "\2212";
